Fix horizontal scrollbar size.

--- a/src/main/resources/gui/theme/common/jams_editor.css
+++ b/src/main/resources/gui/theme/common/jams_editor.css
@@ -65,10 +65,6 @@
     -fx-text-fill: -theme-foreground;
 }
 
-.code-area .scroll-pane {
-    -fx-background-color: -theme-background-darkest;
-}
-
 .caret {
     -fx-stroke: -theme-foreground;
 }
